Fix layout issue

--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -9,7 +9,7 @@
 }
 
 
-@media(max-width: 1536px){
+@media(max-width: 1535px){
     .container{
         display:none;
     }
